--- a/examples/ssm_hyak.ini
+++ b/examples/ssm_hyak.ini
@@ -2,7 +2,7 @@
 # Where your model runs are kept on klone
 run_root = /mmfs1/gscratch/brett/bedaro
 # Where to save model outputs
-save_root = ondra.mooo.com:wqmodels/ssm
+save_root = ondra:wqmodels/ssm
 casename = ssm
 
 # Optional: where to save temporary files
